--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <!-- <app-word></app-word> -->
-  <app-my-input></app-my-input>
+  <!-- <app-my-input></app-my-input> -->
+  <app-person></app-person>
 </div>
