--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <!-- <app-word></app-word> -->
   <!-- <app-my-input></app-my-input> -->
-  <app-person></app-person>
+  <!-- <app-person></app-person> -->
+  <app-list-words></app-list-words>
 </div>
