--- a/src/app/components/list-words/list-words.component.html
+++ b/src/app/components/list-words/list-words.component.html
@@ -1,3 +1,25 @@
+<div class="form-group word-form">
+    <input
+        placeholder="English"
+        class="form-control"
+    />
+    <br />
+    <input
+        placeholder="Vietnamese"
+        class="form-control"
+    />
+    <br />
+    <div class="btn-container">
+        <button class="btn btn-success">
+            Add word
+        </button>
+        <button
+            class="btn btn-danger"
+        >
+            Cancel
+        </button>
+    </div>
+</div>
 <div class="word" key={wordInfo._id}>
     <div class="word-container">
     <h3 class="text-success">one</h3>
