--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,11 @@
     display: flex;
     justify-content: space-around;
 }
+
+.word-form {
+    width: 200px;
+    background-color: #F0F0F0;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 10px;
+}
