--- a/src/app/components/list-words/list-words.component.html
+++ b/src/app/components/list-words/list-words.component.html
@@ -20,11 +20,11 @@
         </button>
     </div>
 </div>
-<div class="word" key={wordInfo._id}>
+<div class="word" *ngFor="let word of words">
     <div class="word-container">
-    <h3 class="text-success">one</h3>
+    <h3 class="text-success">{{ word.en }}</h3>
     <h3 class="text-danger">
-        mot
+        {{ word.vn }}
     </h3>
     </div>
     <div class="btn-container">
