--- a/src/app/components/list-words/list-words.component.html
+++ b/src/app/components/list-words/list-words.component.html
@@ -2,15 +2,17 @@
     <input
         placeholder="English"
         class="form-control"
+        [(ngModel)]="txtEn"
     />
     <br />
     <input
         placeholder="Vietnamese"
         class="form-control"
+        [(ngModel)]="txtVn"
     />
     <br />
     <div class="btn-container">
-        <button class="btn btn-success">
+        <button class="btn btn-success" (click)="addWord();">
             Add word
         </button>
         <button
