--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <!-- <app-word></app-word> -->
   <!-- <app-my-input></app-my-input> -->
   <!-- <app-person></app-person> -->
-  <app-list-words></app-list-words>
+  <!-- <app-list-words></app-list-words> -->
+  <app-parent></app-parent>
 </div>
